--- a/Common/Makefile
+++ b/Common/Makefile
@@ -1,17 +1,17 @@
-SOURCES = main.c
-SOURCES+= ../Common/ballQuery.c ../Common/gen_points.c
+SOURCES = ballQuery.c gen_points.c
+SOURCES+=
 OBJS = $(SOURCES:%.c=%.o)
 CC   = gcc
 CFLAGS =-Wall -g -w -std=gnu99 -fopenmp -O3 #-I../
 LDFLAGS=-lm
-TARGET = BallAlg-Serial
+TARGET = BallQuery
 
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
 	$(CC) $(CFLAGS) $^ -o $(TARGET) $(LDFLAGS)
 
-main.o: main.c
+BallQuery.o: BallQuery.c
 
 $(OBJS):
 	$(CC) $(CFLAGS) -c -o $@ $<
