--- a/Common/Makefile
+++ b/Common/Makefile
@@ -1,4 +1,4 @@
-SOURCES = ballQuery.c
+SOURCES = ballQuery.c gen_points.c
 SOURCES+=
 OBJS = $(SOURCES:%.c=%.o)
 CC   = gcc
@@ -6,12 +6,12 @@ CFLAGS =-Wall -g -w -std=gnu99 -fopenmp -O3 #-I../
 LDFLAGS=-lm
 TARGET = ballQuery
 
-all: $(TARGET)
-
-$(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) $^ -o $(TARGET) $(LDFLAGS)
+all: $(OBJS)
+	#$(CC) $(CFLAGS) $^ -o $(TARGET) $(LDFLAGS)
 
 ballQuery.o: ballQuery.c
+
+gen_points.o: gen_points.c
 
 $(OBJS):
 	$(CC) $(CFLAGS) -c -o $@ $<
