--- a/OpenMP/Makefile
+++ b/OpenMP/Makefile
@@ -2,9 +2,9 @@ SOURCES = main.c tree.c
 SOURCES+=
 OBJS = $(SOURCES:%.c=%.o)
 CC   = gcc
-CFLAGS =-Wall -g -w -std=gnu99 -fopenmp -O0 #-I../
+CFLAGS =-Wall -g -w -std=gnu99 -fopenmp -O3 #-I../
 LDFLAGS=-lm
-TARGET = BallAlg-OpenMP
+TARGET = ballAlg-omp
 
 all: $(TARGET)
 
